# BellmanBindings-iOS

./: .gitignore
cargo/: Cargo.toml
cargo/headers/: verifier.h
cargo/src/: lib.rs
cargo/src/filesystem/: mod.rs
cargo/src/helpers/: circuits.rs  engines.rs  mod.rs  string_helpers.rs  types_helpers.rs
cargo/src/test/: inputs.txt  mod.rs  proof.txt  proof_vec.txt  test.h
cargo/src/verifier/: mod.rs  verifier.h
cargo/test/: vk.txt
ios/BellmanBindings/BellmanBindings/: AppDelegate.swift  BellmanBindings-Bridging-Header.h  BellmanBindings.h  Downloader.swift  StringProtocolExtension.swift  Verifier.swift  ViewController.swift
ios/BellmanBindings/BellmanBindings.xcodeproj/: project.pbxproj
ios/BellmanBindings/BellmanBindings.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/BellmanBindings/BellmanBindings.xcodeproj/project.xcworkspace/xcuserdata/anton.xcuserdatad/: UserInterfaceState.xcuserstate
ios/BellmanBindings/BellmanBindings.xcodeproj/xcuserdata/anton.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/BellmanBindings/BellmanBindingsTests/: BellmanBindingsTests.swift  Downloader.swift
